--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -3,12 +3,29 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 header .logo {
-    background: url("../images/logo.png") no-repeat;
-    left: 20px;
-    height: 100%;
+    background: url("../images/logo.png") no-repeat center;
+    padding-left: 20px;
+    height: 60px;
+    width: 142px;
 }
-#api_status .available {
-    background-color: #ff545f;
+
+#api_status {
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    margin-right: 30px;
+    background-color: #CCCCCC;
+}
+
+#api_status.available {
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    margin-right: 30px;
+    background-color: #ff545f
 }
